--- a/schoolnotes/hw/rahw5/rahw5.tex
+++ b/schoolnotes/hw/rahw5/rahw5.tex
@@ -61,8 +61,20 @@
 \newtheorem{assumption}[theorem]{Assumption}
 
 \begin{document}
-\title{HW}
+\title{HW 5}
 \author{Samuel Lindskog}
 \maketitle
 \subsection*{Problem 1}
+Show that if a sequence of rational numbers converges to a rational number then the sequence is Cauchy.
+\smallbreak
+\begin{IEEEproof}
+	Let \((a_n)_{n=1}^{\infty}\) be a sequence of rational numbers. If \(a_n\) converges to \(L\in\mathbb{Q}\) if for all \(\epsilon>0\) there exists \(N>0\) such that \(n>N\Rightarrow \abs{a_n-L}<\epsilon\).
+\end{IEEEproof}
+\subsection*{Problem 2}
+\subsection*{Problem 3}
+\subsection*{Problem 4}
+\subsection*{Problem 5}
+\subsection*{Problem 6}
+\subsection*{Bonus 5.4.4}
+\subsection*{Bonus 5.4.3}
 \end{document}
