--- a/schoolnotes/ra/ra.tex
+++ b/schoolnotes/ra/ra.tex
@@ -34,15 +34,23 @@ top=20mm,
 	Let \(m\) be a natural number. \(0+m\coloneq m\) and \((n++)+m\coloneq(n+m)++\).
 \end{definition}
 \begin{proposition}
+	\label{uniquezero}
+	There is only one zero, i.e. for \(a\in\mathbb{N}\) if \(0+a=0'+a=a\), then \(0=0'\).
+\end{proposition}
+	\begin{IEEEproof}
+		Suppose \(0\neq 0'\). Then \(0\) is a successor of \(0'\) or \(0'\) is a successor of \(0\). Because no successor of a natural number is \(0\), this is impossible.
+	\end{IEEEproof}
+\begin{proposition}
 	\label{zerocommute}
 	\(m+0=m\).
+\end{proposition}
 	\begin{IEEEproof}
 		Let \(n\in\mathbb{N}\). \(0+0\coloneq 0\), so by inductive hypothesis \(n+0=n\). \((n++)+0\coloneq(n+0)++\), and from the inductive hypothesis equals \(n++\).
 	\end{IEEEproof}
-\end{proposition}
 \begin{lemma}
 	\label{rightaddition}
 	For any natural numbers \(n\) and \(m\), \(n+(m++)=(n+m)++\).
+\end{lemma}
 	\begin{IEEEproof}
 		Suppose \(n,m\in\mathbb{N}\). \(0+(m++)\coloneq m++=(0+m)++\). By inductive hypothesis \(n+(m++)=(n+m)++\). From the definition of addition \((n++)+(m++)=(n+(m++))++\) and from the inductive hypothesis \(n+(m++)=(n+m)++\) so we have
 		\begin{IEEEeqnarray*}{rCl}
@@ -51,25 +59,37 @@ top=20mm,
 			&=&((n++)+m)++
 		\end{IEEEeqnarray*}
 	\end{IEEEproof}
-\end{lemma}
 \begin{proposition}[Commutivity of addition]
 	For \(n,m\in\mathbb{N}\), \(n+m=m+n\).
+\end{proposition}
 	\begin{IEEEproof}
 		Let \(n,m\in\mathbb{N}\). From proposition \ref{zerocommute}, \(0+m=m+0\), so by inductive hypothesis \(n+m=m+n\). \((n++)+m=(n+m)++\) and from inductive hypothesis this equals \((m+n)++\). From lemma \ref{rightaddition}, this equals \(m+(n++)\).
 	\end{IEEEproof}
+\begin{proposition}
+	If \(a,b\in\mathbb{N}\) and \(a+b=a\), then \(b=0\).
 \end{proposition}
+	\begin{IEEEproof}
+		Suppose \(a,b\in\mathbb{N}\) with \(a+b=a\). \(\)
+	\end{IEEEproof}
 \begin{proposition}[Associativity of addition]
 	Let \(a,b,c\in\mathbb{N}\). Then \((a+b)+c=a+(b+c)\).
-	\begin{IEEEproof}
-		exercise
-	\end{IEEEproof}
 \end{proposition}
+	\begin{IEEEproof}
+		Suppose \(a,b\in\mathbb{N}\). From here we utilize the definition of addition, and commutivity of addition for the rest of the proof. It follows that \((a+b)+0=a+b=a+(b+0)\). By inductive hypothesis suppose \((a+b)+c=a+(b+c)\) for \(c\in\mathbb{N}\). Then
+		\begin{IEEEeqnarray*}{rCl}
+			(a+b)+c++&=&[(a+b)+c]++\\
+			&=&[a+(b+c)]++\\
+			&=&a+(c+b)++\\
+			&=&a+[(c++)+b]\\
+			&=&a+(b+c++)
+		\end{IEEEeqnarray*}
+	\end{IEEEproof}
 \begin{proposition}[Cancellation law]
 	Let \(a,b,c\in\mathbb{N}\). Iff \(a+b=a+c\), then \(b=c\).
+\end{proposition}
 	\begin{IEEEproof}
 		If \(0+b=0+c\) then from the definition of addition \(b=c\). By inductive hypothesis for any \(n\in\mathbb{N}\), \(n+b=n+c\). \((n++)+b=(n+b)++\) and \((n++)+c=(n+c)++\), so from the inductive hypothesis and the axioms of natural numbers, \((n++)+b=(n++)+c\).
 	\end{IEEEproof}
-\end{proposition}
 \begin{definition}[Positive natural number]
 	A natural number \(n\) is said to be positive iff it is not \(0\).
 \end{definition}
@@ -77,6 +97,20 @@ top=20mm,
 	Let \(n,m\in\mathbb{N}\). We write \(n\geq m\) or \(m\geq n\) iff \(n=m+a\) for some \(a\in\mathbb{N}\).
 \end{definition}
 \begin{proposition}
+	\label{nonzerosum}
+	If \(a\) or \(b\) are not zero, then \(a+b\neq 0\).
+\end{proposition}
+	\begin{IEEEproof}
+		Suppose \(a,b\in\mathbb{N}\) with \(b\neq 0\). If \(a=0\) then \(a+b=0+b=b\neq 0\). If \(a\neq 0\), because no natural number has zero as a successor it follows from the definition of addition that \(a+b\neq 0\).
+	\end{IEEEproof}
+\begin{proposition}[Trichotomy of order for natural numbers]
+	Let \(a,b\in\mathbb{N}\). Then exactly one of the following statements is true: \(a<b,\,a=b,\,a>b\).
+\end{proposition}
+	\begin{IEEEproof}
+		Suppose \(a,b\in\mathbb{N}\) and \(a<b\). Then for some \(c\in\mathbb{N}\), \(a=b+c\) with \(b\neq a\). If \(c=0\) then \(a=b\), a contradiction. If \(b<a\), then for some \(d\in\mathbb{N}\), \(b=a+d\) with \(a\neq b\). If \(d=0\) then \(a=b\), a contradiction. Because \(b=b+d+c\) and \(c,d\neq 0\), it follows from commutivity and propositions \ref{nonzerosum} and \ref{uniquezero} that this is impossible. Therefore wlog if \(a<b\) then \(a\) is not greater than or equal to \(b\).
+	Suppose \(a=b\). If \(a<b\) then \(a=b+c\) for some \(c\in\mathbb{N}\) with \(b\neq c\), a contradiction. Therefore wlog if \(a=b\) then \(a\) is not less than or greater than \(b\).
+	\end{IEEEproof}
+\begin{proposition}[Strong principle of induction]
 	Let \(m_0,m,m'\in\mathbb{N}\), and let \(P(x)\) be a property of arbitrary \(x\in\mathbb{N}\). Suppose that for each \(m\geq m_0\) the following implication holds:
 	\begin{equation*}
 		\bigg(\forall m'\in[m_0,m),\,P(m')\bigg)\Rightarrow P(m).
@@ -87,24 +121,63 @@ top=20mm,
 \begin{definition}[Multiplication of natural numbers]
 	Let \(m\) be a natural number. \(0\times m\coloneq 0\) and \((n++)\times m\coloneq (n\times m)+m\).
 \end{definition}
+\begin{proposition}
+	\label{0m}
+	\(m\times 0=0\).
+\end{proposition}
+	\begin{IEEEproof}
+		From the definition of multiplication, \(0\times 0=0\). By inductive hypothesis suppose \(m\times 0=0\). Then \((m++)\times 0=(m\times 0)+0=0\).
+	\end{IEEEproof}
+\begin{proposition}
+	\label{rightmult}
+	For \(n,m\in\mathbb{N}\), \(n\times (m++)=(n\times m)+n\).
+\end{proposition}
+\begin{IEEEproof}
+	Let \(n,m\in\mathbb{N}\). \(0\times (m++)=0=(0\times m)+0\). By inductive hypothesis, \((n\times (m++))=(n\times m)+n\). It follows that
+	\begin{IEEEeqnarray*}{rCl}
+		(n++)\times(m++)&=&(n\times(m++))+(m++)\\
+		&=&(n\times m)+n+(m++)\\
+		&=&(n\times m)+m+(n++)\\
+		&=&((n++)\times m)+(n++)
+	\end{IEEEeqnarray*}
+\end{IEEEproof}
+\begin{proposition}
+	\label{1m}
+	For \(m\in\mathbb{N}\), \(1m=m\).
+\end{proposition}
+	\begin{IEEEproof}
+		If \(m\in\mathbb{N}\) \(0\times m=0\). Then \((0++)\times m=1\times m=0+m=m\).
+	\end{IEEEproof}
 \begin{lemma}[Commutivity of multiplication]
 	Let \(n,m\in\mathbb{N}\). Then \(n\times m=m\times n\).
-	\begin{IEEEproof}
-		exercise
-	\end{IEEEproof}
 \end{lemma}
-\begin{lemma}
-	Let \(n,m\in\mathbb{N}\). Then \(n\times m=0\) iff \(n\) or \(m\) is zero.
 	\begin{IEEEproof}
-		exercise
+		Let \(n,m\in\mathbb{N}\). \(0\times m=m\times 0=0\). By inductive hypothesis, \(n\times m=m\times n\). It follows from proposition \ref{rightmult} that
+		\begin{IEEEeqnarray*}{rCl}
+			(n++)\times m&=&(n\times m)+m\\
+			&=&(m\times n)+m\\
+			&=&m\times(n++)
+		\end{IEEEeqnarray*}
 	\end{IEEEproof}
-\end{lemma}
 \begin{proposition}[Distributive law]
 	For any natural numbers \(a,b,c,\) we have \(a(b+c)=ab+ac\).
 \end{proposition}
+\begin{IEEEproof}
+	TODO
+\end{IEEEproof}
 \begin{proposition}[Associativity of multiplication]
 	If \(a,b,c\in\mathbb{N}\) then \((a\times b)\times c=a\times(b\times c)\).
 \end{proposition}
+\begin{IEEEproof}
+	TODO
+\end{IEEEproof}
+\begin{proposition}
+	\label{posinatmult}
+	If \(a,b\in\mathbb{N}^+\), then \(ab\neq 0\).
+\end{proposition}
+	\begin{IEEEproof}
+		Let \(a\in\mathbb{N}^+\). By proposition \ref{1m} \(1a=a\) and \(a\) is positive. By inductive hypothesis if \(n\in\mathbb{N}^+\) then \(na\) is positive. \(n++\) is a successor to \(n\), and no successor of a natural number is zero, so \(n++\) is positive. \((n++)a=na+a\). Both \(na\) and \(a\) are positive and by proposition \ref{nonzerosum}, \(na+a\) is positive and thus not zero.
+	\end{IEEEproof}
 \begin{proposition}
 	If \(a,b\) are natural numbers such that \(a<b\), and \(c\) is positive, then \(ac<bc\).
 \end{proposition}
@@ -120,6 +193,7 @@ top=20mm,
 \section{Set theory}
 \subsection{Fundamentals}
 \begin{definition}[Axioms of sets]
+	\label{setaxioms}
 	\,
 	\begin{enumerate}
 		\item (Sets are objects) If \(A\) is a set, then \(A\) is also an object. In particular, given two sets \(A\) and \(B\), it is meaningful to ask whether \(A\) is also an element of \(B\).
@@ -136,18 +210,51 @@ top=20mm,
 				z\in\{y\,|\,P(x,y),\, x\in A\}\Leftrightarrow P(x,z).
 			\end{equation*}
 		\item (Infinity) There exists a set \(\mathbb{N}\), whose elements are called natural numbers, as well as an object \(0\in\mathbb{N}\), and an object \(N++\) assigned to every natural number \(n\in\mathbb{N}\), such that the Peano axioms hold.
+		\item (Universal specification) DANGER - Suppose for every object \(x\) we have a property \(P(x)\). Then there exists a set \(\{x\,|\,P(x)\}\).
+		\item (Regularity). If \(A\) is a non-empty set, then there is at least one element \(x\) of \(A\) which is either not a set, or is disjoint from \(A\).
+		\item (Power set) Let \(X\) and \(Y\) be sets. Then there exists a set, denoted \(Y^X\), which consists of all the functions from \(X\) to \(Y\), thus
+			\begin{equation*}
+				f\in Y^X\Leftrightarrow f\text{ is a function from } X\text{ to }Y.
+			\end{equation*}
+		\item (Union) Let \(A\) be a set whose elements are all sets. Then there exists a set \(\bigcup A\) defined
+			\begin{equation*}
+				x\in\bigcup A=\{x\,|\,\exists S\in A,\,x\in S\}.
+			\end{equation*}
 	\end{enumerate}
 \end{definition}
-\begin{lemma}
+\begin{remark}
+	The axioms of set theory introduced, excluding universal specification, are known as the Zermelo-Fraenkel axioms of set theory.
+\end{remark}
+\begin{lemma}[Single choice]
+\label{singlechoice}
 	Let \(A\) be a non-empty set. Then there exists an object \(x\) such that \(x\in A\).
+	\begin{IEEEproof}
+		Suppose there does not exist any object \(x\) such that \(x\in A\). Simultaneously \(x\notin\emptyset\), so \(x\in A\Leftrightarrow x\in\emptyset\) and \(A=\emptyset\), a contradiction.
+	\end{IEEEproof}
 \end{lemma}
 \begin{definition}[Subset]
 	Let \(A,B\) be sets. We say that \(A\) is a subset of \(B\), denoted \(A\subseteq B\), iff every element of \(A\) is also an element of \(B\). We say that \(A\) is a proper subset of \(B\), denoted \(A\subsetneq B\), if \(A\subseteq B\) and \(A\neq B\).
 \end{definition}
+\begin{theorem}
+	Let \(A\) be a set. Then \(\emptyset\subseteq A\).
+	\begin{IEEEproof}
+		If \(\emptyset\subseteq A\) then for all objects \(x\),
+		\begin{equation*}
+			x\in\emptyset\Rightarrow x\in A.
+		\end{equation*}
+		This is vacuously true because there does not exist \(x\) such that \(x\in\emptyset\).
+	\end{IEEEproof}
+\end{theorem}
 \begin{definition}[Intersection]
-	The intersection \(S_1\cap S_2\) of two sets is defined to be the set
+	The intersection \(S_1\cap S_2\) of two sets is the set
 	\begin{equation*}
-		S_1\cap S_2\coloneq\{x\in S_1\,|\,x\in S_2\}.
+		S_1\cap S_2=\{x\,|\,x\in S_1\wedge x\in S_2\}.
+	\end{equation*}
+\end{definition}
+\begin{definition}[Union]
+	The union \(S_1\cup S_2\) of two sets is the set
+	\begin{equation*}
+		S_1\cup S_2=\{x\,|\,x\in S_1\vee x\in S_2\}.
 	\end{equation*}
 \end{definition}
 \begin{definition}[Disjoint]
@@ -156,7 +263,7 @@ top=20mm,
 \begin{definition}[Difference set]
 	If \(A\) and \(B\) are sets, the set \(A\setminus B\) is the set \(A\) with any elements of \(B\) removed, i.e.
 	\begin{equation*}
-		A\setminus B\coloneq\{x\in A\,|\,x\notin B\}.
+		A\setminus B\coloneq\{x\,|\,x\in A\wedge x\notin B\}.
 	\end{equation*}
 \end{definition}
 \begin{proposition}
@@ -172,9 +279,443 @@ top=20mm,
 		\item (De Morgan Laws) \(X\setminus(A\cup B)=(X\setminus A)\cap(X\setminus B)\) and \(X\setminus (A\cap B)=(X\setminus A)\cup(X\setminus B)\).
 	\end{enumerate}
 \end{proposition}
-\subsection{Functions}
-\begin{definition}[Function]
-	
+\begin{definition}[Ordered pair]
+	If \(x\) and \(y\) are any objects, we define the ordered pair \((x,y)\) to be a new object which consists of \(x\) as its "first component" and \(y\) as its "second component". Two ordered pairs \(x,y\) and \(x',y'\) are equal if
+	\begin{equation*}
+		x=x',\quad y=y'.
+	\end{equation*}
 \end{definition}
+\begin{definition}[Cartesian product]
+	Let \(A,B\) be sets. Then the cartesian product of \(A\) and \(B\), written \(A\times B\), is
+	\begin{equation*}
+		A\times B=\{(a,b)\,|,a\in A,\,b\in B\}.
+	\end{equation*}
+\end{definition}
+\begin{definition}[Ordered \(n\)-tuple]
+	Let \(n\) be a natural number. An ordered \(n\)-tuple \((x_i)_{1\leq i\leq n}\) is a collection of objects \(x_i\), one for every natural number \(i\) between \(1\) and \(n\). Two ordered \(n\)-tuples \((x_i)_{1\leq i\leq n}\) and \((y_i)_{1\leq i\leq n}\) are said to be equal iff \(x_i=y_i\) for all \(1\leq i\leq n\).
+\end{definition}
+\begin{definition}[\(n\)-fold Cartesian product]
+	If \((X_i)_{1\leq i\leq n}\) is an ordered \(n\)-tuple of sets, their Cartisian product \(\prod_{i=1}^{n}X_i\) is defined
+	\begin{equation*}
+		\prod_{i=1}^n X_i=\{(x_i)_{1\leq i\leq n}\,|\, x_i\in X_i\}.
+	\end{equation*}
+\end{definition}
+\begin{definition}[Indexed family]
+	If for each element \(j\in J\) with \(J\neq\emptyset\), there corresponds a set \(A_j\), then
+	\begin{equation*}
+		\mathscr{A}=\{A_j\,|\,j\in J\}.
+	\end{equation*}
+	Is called an indexed family of sets with \(J\) as the index set. If \(J=\{1,2,\ldots,n\}\) we may index the set similarly to sum notation.
+\end{definition}
+\begin{definition}[Union and intersection of indexed family]
+	The union of all sets in an indexed family \(\mathscr{A}\) with index set \(J\) is
+	\begin{equation*}
+		\bigcup_{j\in J}A_j=\{x\,|\,\exists A_j\in\mathscr{A},\,x\in A_j\}.
+	\end{equation*}
+	The intersection of all sets in \(\mathscr{A}\) is
+	\begin{equation*}
+		\bigcap_{j\in J}A_j=\{x\,|\,\forall A_j\in\mathscr{A},\,x\in A_j\}.
+	\end{equation*}
+\end{definition}
+\begin{lemma}[Finite choice]
+	Let \(n\geq 1\) be a natural number, and for each natural number \(1\leq i\leq n\), let \(X_i\) be a non-empty set. Then there exists an \(n\)-tuple \((x_i)_{1\leq i\leq n}\) such that \(x_i\in X_i\) for all \(1\leq i\leq n\). In other words if each \(X_i\) is non-empty, then its \(n\)-fold cartesian product is nonempty.
+	\begin{IEEEproof}
+		Let \(\mathscr{A}=\{A_i\,|\,1\leq i\leq n\}\) with \(n\in\mathbb{N}\) be an indexed family of nonempty sets. It follows from lemma \ref{singlechoice} that for each \(A_i\), \(1\leq i\leq n\), there exists \(a_i\in A_i\). Using this fact, define an ordered \(n\)-tuple \((a_i)_{1\leq i\leq n}\).
+	\end{IEEEproof}
+\end{lemma}
+\subsection{Functions}
+\begin{definition}[Relation]
+	Let \(A,B\)	be sets. A relation between \(A\) and \(B\) is an subset of \(A\times B\).
+\end{definition}
+\begin{definition}[Equivalence relation]
+	An equivalence relation on a set \(S\) is a relation such that for all \(x,y,z\in S\), the relation satisfies the following properties:
+	\begin{enumerate}
+		\item (Reflexive property) \(xRx\).
+		\item (Symmetric property) \(xRy\Rightarrow yRx\).
+		\item (Transitive property) \(xRy\wedge yRx\Rightarrow xRz\).
+	\end{enumerate}
+\end{definition}
+\begin{definition}[Partition]
+	A partition of a set \(S\) is a collection \(\mathscr{P}\) of nonempty subsets of \(S\) that are pairwise disjoint, and whose union is \(S\), i.e.
+	\begin{enumerate}
+		\item \(A=\bigcup\mathscr{P}\).
+		\item \(\forall A,B\in\mathscr{P},\,A\neq B\Rightarrow A\cap B=\emptyset\).
+	\end{enumerate}
+\end{definition}
+\begin{definition}[Function]
+	A function from \(A\) to \(B\), denoted \(f:A\rightarrow B\) is a nonempty relation \(f\subseteq A\times B\) that satisfies the following properties:
+	\begin{enumerate}
+		\item (Existence) \(\forall a\in A,\,\exists b\in B,\,(a,b)\in f\).
+		\item (Uniqueness) \((a,b)\in f\wedge(a,c)\in f\Rightarrow b=c\).
+	\end{enumerate}
+	Set \(A\) is called the domain of \(f\), and set \(B\) is called the codomain. The range of \(f\) is \(f(A)\), i.e. \(\{b\in B\,|\,(a,b)\in f\}\).
+\end{definition}
+\begin{definition}[Equality of functions]
+	Two functions \(f:X\rightarrow Y\) and \(g:X'\rightarrow Y'\) are equal if their domains and codomains are equal, and furthermore that \(f(x)=g(x)\) for all \(x\in X\).
+\end{definition}
+\begin{definition}[Composition]
+	Let \(f:X\rightarrow Y\) and \(g:Y\rightarrow Z\) be two functions such that the codomain of \(f\) is the same set as the domain of \(g\). Then the composition \(g\circ f:X\rightarrow Z\) of the two functions \(g\) and \(f\) is the function defined by the formula
+	\begin{equation*}
+		(g\circ f)(x)=g(f(x)).
+	\end{equation*}
+\end{definition}
+\begin{lemma}
+	Let \(f:Z\rightarrow W\), \(g:Y\rightarrow Z\), and \(h:X\rightarrow Y\) be functions. Then \(f\circ(g\circ h)=(f\circ g)\circ h\).
+	\begin{IEEEproof}
+		\(g\circ h\) is a function from \(X\) to \(Z\), and \(f\circ g\) is a function from \(Y\rightarrow W\), so \((f\circ g)\circ h\) and \(f\circ(g\circ h)\) are functions from \(X\) to \(W\). It follows from the definition of function composition that
+		\begin{IEEEeqnarray*}{rCl}
+			(f\circ(g\circ h))(x)&=&f((g\circ h)(x))\\
+			&=&f(g(h(x)))\\
+			&=&(f\circ g)(h(x))\\
+			&=&((f\circ g)\circ h)(x)
+		\end{IEEEeqnarray*}
+	\end{IEEEproof}
+\end{lemma}
+\begin{definition}[Injective]
+	A function \(f:X\rightarrow Y\) is injective (one-to-one) if for \(x,x'\in X\),
+	\begin{equation*}
+		x\neq x'\rightarrow f(x)\neq f(x')
+	\end{equation*}
+\end{definition}
+\begin{definition}[Surjective]
+	A function \(f:X\rightarrow Y\) is surjective (onto) if
+	\begin{equation*}
+		\forall y\in Y,\,\exists x\in X,\,f(x)=y.
+	\end{equation*}
+\end{definition}
+\begin{definition}[Bijective]
+	A function is bijective (invertible) if it is injective and surjective.
+\end{definition}
+%
+\begin{proposition}
+	Let \(f:A\rightarrow B\) and \(g:B\rightarrow C\). Then
+	\begin{enumerate}
+		\item If \(f\) and \(g\) are surjective, then \(g\circ f\) is surjective.
+		\item If \(f\) and \(g\) are injective, then \(g\circ f\) is injective.
+		\item If \(f\) and \(g\) are bijective, then \(g\circ f\) is bijective.
+	\end{enumerate}
+\end{proposition}
+\begin{lemma}
+	If \(f:X\rightarrow Y\) is bijective then \(f\) is invertible. In other words for all \(y\in Y\) there exists a unique \(x\in X\) denoted \(f^{-1}(y)\) such that \(f(x)=y\). Therefore the inverse of \(f\), \(f^{-1}:Y\rightarrow X\) exists and is defined
+	\begin{equation*}
+		f^{-1}(y)=x.
+	\end{equation*}
+\end{lemma}
+\begin{definition}[Identity function]
+	A function defined on a set \(A\) that maps each element in \(A\) onto itself is called the identity function on \(A\), and is denoted \(i_A\).
+\end{definition}
+\begin{proposition}
+	Let \(f:A\rightarrow B\) be bijective. Then
+	\begin{enumerate}
+		\item \(f^{-1}:B\rightarrow A\) is bijective.
+		\item \(f^{-1}\circ f=i_A\) and \(f\circ f^{-1}=i_B\).
+	\end{enumerate}
+\end{proposition}
+\begin{theorem}
+	Let \(f:A\rightarrow B\) and \(g:A\rightarrow B\) be bijective. Then the composition \(g\circ f:A\rightarrow C\) is bijective and \((g\circ f)^{-1}=f^{-1}\circ g^{-1}\).
+\end{theorem}
+%
+\begin{definition}[Image]
+	If \(f:X\rightarrow Y\) is a function from \(X\) to \(Y\), and \(S\subseteq X\), we define the image of \(S\) under \(f\), \(f(S)\) to be the set
+	\begin{equation*}
+		f(S)=\{f(x)\,|\,x\in S\}.
+	\end{equation*}
+\end{definition}
+\begin{definition}[Inverse image]
+	If \(U\) is a subset of \(Y\), we define the set \(f^{-1}(U)\) to be the set
+	\begin{equation*}
+		f^{-1}(U)=\{x\in X\,|\,f(x)\in U\}.
+	\end{equation*}
+	We call \(f^{-1}(U)\) the inverse image of \(U\).
+\end{definition}
+\begin{proposition}
+	\label{imagessubset}
+	If \(X,Y\) are sets and \(f:X\rightarrow Y\) then \(f(X)\subseteq Y\).
+	\begin{IEEEproof}
+		\(y\in f(X)\) implies \(y\in \{y\,|\,(x,y)\in f\}\) and \(f\) is a subset of \(X\times Y\), so it follows from the definition of the cartesian product that \(y\in Y\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{lemma}
+	Let \(X\) be a set. Then the set
+	\begin{equation*}
+		\{Y\,|\,Y\subseteq X\}
+	\end{equation*}
+	Is a set.
+	\begin{IEEEproof}
+		Let \(X\) be a set and \(A\subseteq X\) with \(A\neq\emptyset\). Then there exists \(p\in A\), and we can define a function \(f:X\rightarrow A\) with \(x\in X\) by
+		\begin{equation*}
+			f(x)=\begin{cases}
+				x\in A&f(x)=x\\
+				x\notin A&f(x)=p
+			\end{cases}
+		\end{equation*}
+		Thus for all \(a\in f(X)\), \(a\in A\) or \(a=p\in A\), so \(f(X)\subseteq A\). Next, for all \(x\in X\), \((x,f(x))\in f(X)\). Because for all \(a\in A\) we have \(a\in X\) then for all \(a\in A\), \((a,f(a))=(a,a)\in f(X)\) so from the definition of an image \(A\subseteq f(X)\). Thus \(A=F(X)\). From the power set axiom in definition \ref{setaxioms}, 
+		\begin{equation*}
+			\{f:X\rightarrow A\,|\,A\subseteq X\wedge A\neq\emptyset\}\subseteq X^X
+		\end{equation*}
+		From replacement, pairwise union, and singleton set axioms in definition \ref{setaxioms}, we can define a set \(\text{P}(X)\) that is the union of all images of functions in \(X^X\), and \(\{\emptyset\}\). As established above, all nonempty subsets of \(X\) are included in this set, and from proposition \ref{imagessubset} all images of functions in \(X^X\) are subsets of \(X\).
+	\end{IEEEproof}
+\end{lemma}
+\begin{definition}[Power set]
+	For a set \(X\), the set \(\{Y\,|\,Y\subseteq X\}\) is called the power set of \(X\), and is denoted \(\text{P}(X)\) or \(2^X\).
+\end{definition}
+\begin{definition}[Cardinality]
+	We say that two sets \(X\) and \(Y\) have equal cardinality iff there exists a bijection \(f:X\rightarrow Y\) from \(X\) to \(Y\).
+\end{definition}
+\begin{proposition}
+	Let \(X,Y,Z\) be sets.
+	\begin{enumerate}
+		\item \(X\) has equal cardinality with \(X\).
+		\item If \(X\) has equal cardinality with \(Y\), then \(Y\) has equal cardinality with \(X\).
+		\item If \(X\) has equal cardinality \(Y\) and \(Y\) has equal cardinality with \(Z\), then \(X\) has equal cardinality with \(Z\)
+			\begin{IEEEproof}
+			\end{IEEEproof}
+	\end{enumerate}
+\end{proposition}
+\begin{definition}[Cardinality \(n\)]
+	Let \(n\) be a natural number. A set \(X\) is said to have cardinality \(n\), if it has equal cardinality with \(\{\in\mathbb{N}\,|\,1\leq i\leq n\}\). In this case we say that \(X\) has \(n\) elements.
+\end{definition}
+\begin{lemma}
+	Suppose that \(n\geq 1\), and set \(X\) has cardinality \(n\). Then \(X\) is non-empty, and if \(x\) is any element of \(X\), then the set \(X-\{x\}\) has cardinality \(n-1\).
+\end{lemma}
+\begin{proposition}
+	Let \(X\) be a set with some cardinality \(n\). Then \(X\) cannot have any other cardinality, i.e. \(X\) cannot have cardinality \(m\) for any \(m\neq n\).
+\end{proposition}
+\begin{definition}[Finite set]
+	A set is finite iff it has cardinality \(n\) for some natural number \(n\); otherwise, the set is called infinte.
+\end{definition}
+\begin{theorem}
+	The set of natural numbers is infinite.
+\end{theorem}
+\section{Integers and rationals}
+\subsection{The integers}
+\begin{definition}[Integers]
+	An integer is an expression of the form \(a-b\), where \(a\) and \(b\) are natural numbers. Two integers are considered to be equal, \(a-b=c-d\), iff \(a+d=c+b\). The set of all integers is denoted \(\mathbb{Z}\).
+\end{definition}
+\begin{remark}
+	The use of \(-\) is purely notational (until subtraction is defined). \(a-b\) can be interpreted as an ordered pair in \(\mathbb{N}\times\mathbb{N}\).
+\end{remark}
+\begin{definition}[Integer addition]
+	The sum of two integers \((a-b)+(c-d)\) is defined by the formula
+	\begin{equation*}
+		(a-b)+(c-d)=(a+c)-(c+d)
+	\end{equation*}
+\end{definition}
+\begin{definition}[Integer multiplication]
+	The product of two integers \((a-b)\times (c-d)\) is defined by the formula
+	\begin{equation*}
+		(a-b)\times(c-d)=(ac+bd)-(ad+bc).
+	\end{equation*}
+\end{definition}
+\begin{remark}
+	We may identify the integers with natural numbers by setting \(n\equiv n-0\). Definitions of equality and previously defined operations remain consistent with each other.
+\end{remark}
+\begin{proposition}
+	\label{addzero}
+	If \(a,b\in\mathbb{Z}\) and \(a+b=b\) then \(a=0\).
+	\begin{IEEEproof}
+prove
+	\end{IEEEproof}
+\end{proposition}
+\begin{lemma}
+	Addition and multiplication are well defined.
+\end{lemma}
+\begin{definition}[Negation of integers]
+	If \((a-b)\) is an integer, we define the negation \(-(a-b)\) to be the integer \(b-a\).
+\end{definition}
+\begin{lemma}[Trichotomy of integers]
+	Let \(x\) be an integer. Then either \(x\) is zero, equal to a positive natural number, or \(x\) negated is a positive natural number.
+\end{lemma}
+\begin{definition}[Positive integer]
+	If \(n\) is a positive natural number, we call \(n\) a positive integer, and \(-n\) a negative integer.
+\end{definition}
+\begin{proposition}[Integer laws for algebra]
+	Let \(x,y,z\) be integers. Then the following identities hold:
+	\begin{IEEEeqnarray*}{l}
+		x+y=y+x\\
+		(x+y)+z=x+(y+z)\\
+		x+0=0+x=x\\
+		x+(-x)=0\\
+		xy=yx\\
+		(xy)z=x(yz)\\
+		1x=x\\
+		x(y+z)=xy+xz\\
+	\end{IEEEeqnarray*}
+\end{proposition}
+\begin{proposition}
+	\label{posiintmult}
+	If \(a,b\in\mathbb{Z}\) with \(a,b>0\), then \(ab>0\).
+	\begin{IEEEproof}
+		If \(a,b\in\mathbb{Z}\) with \(a,b>0\), then for some \(x,y\in\mathbb{N}^+\), \(a=x-0\) and \(b=y-0\). Thus \(ab=(xy+0)=(0+0)=xy-0\). Because \(x,y\neq 0\), by proposition \ref{posinatmult} \(xy>0\) so from the definition of a positive integer \(ab>0\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{proposition}
+	\label{posiintadd}
+	If \(a,b\in\mathbb{Z}\) with \(a,b>0\), then \(a+b>0\).
+	\begin{IEEEproof}
+		If \(a,b\in\mathbb{Z}^+\), then for some \(x,y\in\mathbb{N}^+\) we have \(a=x-0\) and \(b=y-0\), so \(a+b=((x+y)-0)\). It follows from proposition \ref{nonzerosum} that \(x+y>0\) so from the definition of a positive integer, \(a+b>0\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{proposition}
+	\label{monenegation}
+	If \(x\in\mathbb{Z}\) with \(x=(a-b)\) then \(-1\cdot(a-b)=-(a-b)\).
+	\begin{IEEEproof}
+		\(-1\cdot (a-b)=(0-1)\cdot(a-b)=(0a+b)-(a+0b)=-(a-b)\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{proposition}[Integers have no zero divisors]
+	\label{nozerodiv}
+	If \(a,b\) are integers such that \(ab=0\), then \(a=0\) or \(b=0\).
+\end{proposition}
+\begin{corollary}[Cancellation law]
+	If \(a,b,c\) are integers such that \(ac=bc\) and \(c\) is non-zero, then \(a=b\).
+	\begin{IEEEproof}
+		Let \(a,b,c\in\mathbb{Z}\) with \(c=\neq 0\). If \(a=0\) it follows from proposition \ref{nozerodiv} that \(ac=0\) so \(bc=0\) and thus \(b=0\), so \(a=b\). If \(a\neq 0\), suppose to the contrary that \(b\neq a\). It follows from proposition \ref{addzero} that there exists \(d\in\mathbb{Z}\) with \(d\neq 0\) such that \(a+d=b\). Using laws for algebra we see that \(ac=ac+dc\). By proposition \ref{nozerodiv} \(dc\neq 0\), a contradiction by proposition \ref{addzero}. Therefore \(a=b\).
+	\end{IEEEproof}
+\end{corollary}
+\begin{definition}[Ordering of integers]
+	Let \(n,m\in\mathbb{Z}\). We say that \(n\) is greater than or equal to \(m\) and write \(n\geq m\) or \(m\leq n\) iff we have \(n=m+a\) for some natural number \(a\). We say that \(n\) is strictly greater than \(m\) and write \(n>m\) or \(m<n\) iff \(n\geq m\) and \(n\neq m\).
+\end{definition}
+\subsection{The rationals}
+\begin{definition}[Rational number]
+	A rational number is an expression of the form \(a//b\), where \(a\) and \(b\) are integers and \(b\neq 0\). Two rational numbers are equal, \(a//b=c//d\), iff \(ad=bc\). The set of all rational numbers is denoted \(\mathbb{Q}\).
+\end{definition}
+\begin{remark}
+We may indentify the rationals with natural numbers by setting \(n//1\equiv n\).
+\end{remark}
+\begin{definition}[Addition of rationals]
+	If \(a//b\) and \(c//d\) are rationals, their sum is
+	\begin{equation*}
+		(a//b)+(c//d)=(ad+bc)//(bd).
+	\end{equation*}
+\end{definition}
+\begin{definition}[Product of rationals]
+	If \(a//b\) and \(c//d\) are rationals, their product is
+	\begin{equation*}
+		(a//b)\cdot(c//d)=(ac)//(bd).
+	\end{equation*}
+\end{definition}
+\begin{definition}[Negation of rationals]
+	The negation of a rational \((a//b)\), denoted \(=(a//b)\) is
+	\begin{equation*}
+		-(a//b)=(-a//b).
+	\end{equation*}
+\end{definition}
+\begin{definition}[Reciprocal of rationals]
+	If \(x=a//b\) is a non-zero rational number, then the reciprocal of \(x^{-1}\) of \(x\) is defined
+	\begin{equation*}
+		x^{-1}=b//a.
+	\end{equation*}
+\end{definition}
+\begin{lemma}
+	The sum, product, negation, and reciprocal operations on rational numbers are well-defined.
+\end{lemma}
+\begin{proposition}
+	\label{doublenegation}
+	The negation of the negation of \(x\in\mathbb{Q}\) is \(x\).
+	\begin{IEEEproof}
+		The negation of the negation of an integer \(x=(a-b)\) is \(--(a-b)=-(b-a)=(a-b)\) so \(--x=x\). The negation of the negation of a rational number \(y=(c//d)\) is \(--(c//d)=-(-c//d)=(--c//d)=c//d\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{definition}[Quotient]
+	The quotient of two rationals \(x\) and \(y\) with \(y\neq 0\), denoted \(x/y\), is
+	\begin{equation*}
+		x/y=x\times y^{-1}.
+	\end{equation*}
+\end{definition}
+\begin{definition}[Subtraction]
+	The difference of two rationals \(x\) and \(y\), denoted \(x-y\), is defined
+	\begin{equation*}
+		x-y=x+(-y).
+	\end{equation*}
+\end{definition}
+\begin{definition}[Positive rational number]
+	A rational number \(x\) is said to be positive iff we have \(x=a/b\) for some positive integers \(a\) and \(b\). It is said to be negative iff \(x=-y\) for some positive rational \(y\).
+\end{definition}
+\begin{definition}[Ordering of rationals]
+	Let \(x,y\in\mathbb{Q}\). We say that \(x>y\) iff \(x-y\) is a positive rational number, and \(x<y\) iff \(x-y\) is a positive negative rational number. We write \(x\geq y\) iff either \(x>y\) or \(x=y\), and \(x\leq y\) iff either \(x<y\) or \(x=y\).
+\end{definition}
+\begin{proposition}
+	\label{xgzerop}
+	\(x\in\mathbb{Q}\) is positive iff \(x>0\), and negative iff \(x<0\).
+	\begin{IEEEproof}
+		If \(x= a//b\) is a positive rational number then \(a,b>0\). Because \(0=0//d\) for some \(d\in\mathbb{N}\setminus\{0\}\), \(x-0=x+0=ad//bd=a//b\) and thus \(x>0\). If \(x>0\) then \(x-0\) is positive. Because \(0=0//d\) for some \(d\in\mathbb{N}\setminus\{0\}\) we have \(x-0=x+0=ad//bd=a//b\), which is positive.
+	\end{IEEEproof}
+\end{proposition}
+\begin{proposition}[Laws of algebra for rationals]
+	Let \(x,y,z\) be rationals. Then the following laws of algebra hold:
+	\begin{IEEEeqnarray*}{l}
+		x+y=y+x\\
+		(x+y)+z=x+(y+z)\\
+		x+0=x\\
+		x+(-x)=0\\
+		xy=yx\\
+		(xy)z=d(yz)\\
+		1x=x\\
+		x(y+z)=xy+xz\\
+	\end{IEEEeqnarray*}
+\end{proposition}
+\begin{proposition}
+	\label{ronenegation}
+	\(-1x=-x\).
+	\begin{IEEEproof}
+		If \(x=a//b\) then \(-1\cdot x\) is \((-1//1)\cdot(a//b)=-1a//b\). From proposition \ref{monenegation}, \(-1a=-a\) so \(-1a//b=-(a//b)=-x\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{proposition}
+	\label{posiratadd}
+	If \(a,b\in\mathbb{Q}\) with \(a>0\) and \(b>0\) then \(a+b>0\).
+	\begin{IEEEproof}
+		Suppose \(a,b\in\mathbb{Q}\) with \(a,b>0\). It follows from the definition of positive rational number that for some positive \(x,y,z,w\in\mathbb{Z}\), \(a=x//y\) and \(b=z//w\), so \(ab=xw+zy/yw\). By proposition \ref{posiintmult} \(xw,zy,yw>0\), so by \ref{posiintadd}, \(a+b>0\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{lemma}[Trichotomy of rationals]
+	Let \(x\) be a rational number. Then exactly one of the following three statements is true:
+	\begin{enumerate}
+		\item \(x=0\).
+		\item \(x\) is positive.
+		\item \(x\) is negative.
+	\end{enumerate}
+\end{lemma}
+\subsection{Absolute value and exponentiation}
+\begin{definition}[Absolute value]
+	If \(x\) is a rational number, the absolute value \(\abs{x}\) of \(x\) is defined as follows:
+	\begin{equation*}
+		\abs{x}=\begin{cases}
+			x,&x\geq 0\\
+			-x,&x<0
+		\end{cases}
+	\end{equation*}
+\end{definition}
+\begin{definition}[Distance]
+	The distance between \(x,y\in\mathbb{Q}\), sometimes denoted \(d(x,y)\), is
+	\begin{equation*}
+		d(x,y)=\abs{x-y}.
+	\end{equation*}
+\end{definition}
+\begin{proposition}
+	For all \(x\in\mathbb{Q}\), \(\abs{x}\geq 0\).
+	\begin{IEEEproof}
+		If \(x\geq 0\) then \(\abs{x}=x\) so \(\abs{x}\geq 0\). If \(x<0\) then \(\abs{x}=-x\). By proposition \ref{xgzerop} \(x\) is negative. Therefore there exists \(y\in\mathbb{Q}^+\) such that \(x=-y\), so by proposition \ref{doublenegation} \(-x=--y=y\) and \(-x\) is positive. By proposition \ref{xgzerop}, \(-x>0\).
+	\end{IEEEproof}
+\end{proposition}
+\begin{proposition}[Triangle inequality]
+	For \(x,y\in\mathbb{Q}\), \(\abs{x+y}\leq\abs{x}+\abs{y}\).
+	\begin{IEEEproof}
+	\end{IEEEproof}
+\end{proposition}
+\begin{definition}[\(\epsilon\)-closeness]
+	Let \(\epsilon>0\) be a rational number, and let \(x,y\) be rational numbers. We say that \(y\) is \(\epsilon\)-close to \(x\) iff \(d(y,x)<\epsilon\).
+\end{definition}
+\begin{definition}[Exponentiation to a natural number]
+	Let \(x\) be a rational number. To raise \(x\) to the power \(0\), we define \(x^0=1\) and for all \(n\in\mathbb{N}\), \(x^{n+1}=x^n\times x\).
+\end{definition}
+\begin{definition}[Exponentiation to a negative number]
+	Let \(x\) be a non-zero rational number. Then for any negative integer \(-n\),
+	\begin{equation*}
+		x^{-n}=1/x^n.
+	\end{equation*}
+\end{definition}
+\section{The real numbers}
+\subsection{Sequences}
 \end{document}
-
